--- a/docs/.vitepress/theme/style/style.css
+++ b/docs/.vitepress/theme/style/style.css
@@ -22,3 +22,22 @@ body[scroll],
   background-color: rgba(166, 166, 205, 0.3);
   transition: 0s;
 }
+
+.vp-doc th,
+.vp-doc td {
+  text-align: center;
+}
+
+details>summary:first-of-type {
+  font-size: 16px;
+  padding: 8px 0;
+  cursor: pointer;
+  color: #1989fa;
+}
+
+
+.example {
+  border: 1px solid #dcdfe6;
+  border-radius: 5px;
+  padding: 20px;
+}
