--- a/packages/theme-chalk/src/checkbox.scss
+++ b/packages/theme-chalk/src/checkbox.scss
@@ -51,18 +51,50 @@
     color: map.get($colors, 'primary', 'base');
   }
 
+  &:has(input[type='checkbox']:checked) {
+    @include when(border) {
+      border: 1px solid $vi-checkbox-checked-input-border-color;
+    }
+  }
+
   // size
   @each $type in $checkbox-types {
     &--#{$type} {
       font-size: map.get($checkbox-size, $type);
+
+      @include when(border) {
+        @if $type=='small' {
+          &.is-border {
+            padding: 0 10px 0 5px;
+          }
+        }
+
+        @if $type=='large' {
+          padding: 0 20px 0 13px !important;
+        }
+      }
     }
   }
+
 
   @include e(input) {
     position: relative;
     white-space: nowrap;
     outline: none;
     display: inline-flex;
+
+    @include when(indeterminate) {
+      .#{$namespace}-checkbox__inner {
+        background-color: $vi-checkbox-checked-bg-color;
+        color: #fff;
+
+        &::after {
+          display: block;
+          font-family: $font-family;
+          content: "\e88b";
+        }
+      }
+    }
   }
 
   @include e(original) {
@@ -129,9 +161,54 @@
       background-color: #ddd;
     }
 
+
+    &:has(input[type='checkbox']:checked) {
+      @include when(border) {
+        border: 1px solid $vi-checkbox-checked-input-border-color;
+      }
+    }
+
     & .vi-checkbox__label {
       color: #a8abb2;
       cursor: not-allowed;
     }
+
+    &.is-indeterminate {
+      .#{$namespace}-checkbox__inner {
+        background-color: $vi-checkbox-bg-color;
+
+        &::before {
+          background-color: $vi-checkbox-disabled-checked-icon-color;
+        }
+      }
+    }
+
+    &.is-border {
+      border: 1px solid;
+    }
+  }
+
+
+
+  @include e(inner) {
+    display: inline-block;
+    position: absolute;
+    border: 1px solid $vi-checkbox-boder-color;
+    border-radius: 2px;
+    box-sizing: border-box;
+    width: $vi-checkbox-input-width;
+    height: $vi-checkbox-input-height;
+    background-color: #fff;
+    z-index: 1;
+    transition: border-color 0.25s cubic-bezier(0.71, -0.46, 0.29, 1.46),
+      background-color 0.25s cubic-bezier(0.71, -0.46, 0.29, 1.46),
+      outline 0.25s cubic-bezier(0.71, -0.46, 0.29, 1.46);
+  }
+
+  @include when(border) {
+    padding: 0 15px 0 9px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
   }
 }
