--- a/packages/theme-chalk/src/input.scss
+++ b/packages/theme-chalk/src/input.scss
@@ -100,6 +100,27 @@
   }
 
   @include e(count) {}
+
+
+  &.vi-input--small {
+    line-height: 24px;
+    font-size: 12px;
+
+    & .vi-input__inner {
+      height: 22px;
+      line-height: 22px;
+    }
+  }
+
+  &.vi-input--large {
+    line-height: 40px;
+    font-size: 16px;
+
+    & .vi-input__inner {
+      height: 40px;
+      line-height: 22px;
+    }
+  }
 }
 
 @include b(textarea) {
