--- a/packages/theme-chalk/src/common/_variable.scss
+++ b/packages/theme-chalk/src/common/_variable.scss
@@ -401,3 +401,15 @@ $vi-popover-title-font-size:16px;
 $vi-popover-border-radius:4px;
 $vi-popover-border-radius:4px;
 $vi-popover-title-text-color:$text-color-primary;
+
+
+/*    Link
+**************************/
+$vi-link-font-size:14px;
+$vi-link-font-weight:500;
+$vi-link-text-color:#606266;
+
+
+/*     Dividert
+******************/
+$vi-divider-bg:$color-white;
