--- a/packages/theme-chalk/src/button.scss
+++ b/packages/theme-chalk/src/button.scss
@@ -1,72 +1,77 @@
-@use "./common/_variable"as *;
-@use "./mixins/config.scss"as *;
-@use "./mixins/mixins.scss"as *;
-@use "./mixins/_button.scss"as *;
-@use "sass:map";
-@use "sass:color";
+@use './common/_variable' as *;
+@use './mixins/config.scss' as *;
+@use './mixins/mixins.scss' as *;
+@use './mixins/_button.scss' as *;
+@use 'sass:map';
+@use 'sass:color';
 
 @include b(button) {
+  box-sizing: border-box;
   display: inline-block;
+  height: auto;
   margin-bottom: 0;
   font-weight: normal;
+  font-weight: 500;
+  line-height: 1.42857143;
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
-  -ms-touch-action: manipulation;
+  touch-action: manipulation;
   touch-action: manipulation;
   cursor: pointer;
-  background-image: none;
-  height: auto;
-  line-height: 1.42857143;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
+  user-select: none;
+  user-select: none;
+  user-select: none;
+  background-image: none;
   border: $border-base;
-  appearance: none;
-  -webkit-appearance: none;
-  box-sizing: border-box;
   outline: none;
-  font-weight: 500;
   transition: $transition-all;
-
+  appearance: none;
+  appearance: none;
 
   & {
     margin-left: 10px;
   }
 
-
   /* type */
   @each $type in $types {
     @include m($type) {
-      @include button-variant($color-white,
+      @include button-variant(
+        $color-white,
         map.get($colors, #{$type}, 'base'),
         map.get($colors, #{$type}, 'base'),
-        map.get($disabled-colors, #{$type}, 'disabled'), $type);
+        map.get($disabled-colors, #{$type}, 'disabled'),
+        $type
+      );
 
       /*  plain   */
-      @include button-plain(darken(map.get($disabled-colors, #{$type}, 'disabled'), 20%),
+      @include button-plain(
+        darken(map.get($disabled-colors, #{$type}, 'disabled'), 20%),
         transparentize(map.get($colors, #{$type}, 'base'), 0.75),
         map.get($colors, #{$type}, 'base'),
         map.get($disabled-colors, #{$type}, 'disabled'),
-        map.get($colors, #{$type}, 'base'), $type)
+        map.get($colors, #{$type}, 'base'),
+        $type
+      );
     }
   }
-
 
   /* size */
   @each $size in $vi-button--sizeType {
     @include m($size) {
       & {
-        @include button-size(map.get($vi-button--sizes, #{$size}, 'vertical'),
+        @include button-size(
+          map.get($vi-button--sizes, #{$size}, 'vertical'),
           map.get($vi-button--sizes, #{$size}, 'horizontal'),
           map.get($vi-button--sizes, #{$size}, 'font-size'),
           map.get($vi-button--sizes, #{$size}, 'border-radius'),
-          map.get($vi-button--sizes, #{$size}, 'height'), $size);
+          map.get($vi-button--sizes, #{$size}, 'height'),
+          $size
+        );
       }
     }
   }
-
 
   @include when(active) {
     &:hover {
@@ -74,20 +79,19 @@
     }
 
     &:active {
-      transform: translateY(0px);
+      transform: translateY(0);
     }
 
     &:disabled {
-      transform: translate(0px);
+      transform: translate(0);
     }
   }
 
   /* text */
   @each $type in $types {
-
     @include m($type) {
       @include when(text) {
-        @if $type=='default' {
+        @if $type== 'default' {
           color: $text-color;
           background: transparent;
           border-color: transparent;
@@ -106,14 +110,12 @@
             color: darken($text-color, 10%);
             background-color: darken(#f5f7fa, 10%);
           }
-        }
-
-        @else {
+        } @else {
           color: mix($color-white, map.get($colors, #{$type}, 'base'), 20%);
           background: transparent;
           border-color: transparent;
 
-          @include when (bg) {
+          @include when(bg) {
             background-color: #f5f7fa;
           }
 
@@ -123,7 +125,10 @@
           }
 
           &:active {
-            color: darken(mix($color-white, map.get($colors, #{$type}, 'base'), 20%), 10%);
+            color: darken(
+              mix($color-white, map.get($colors, #{$type}, 'base'), 20%),
+              10%
+            );
             background-color: darken(#f5f7fa, 12%);
           }
         }
@@ -132,12 +137,13 @@
           background: transparent;
           border-color: transparent;
 
-          @if $type=='default' {
+          @if $type== 'default' {
             color: lighten($text-color, 20%);
-          }
-
-          @else {
-            color: lighten(mix($color-white, map.get($colors, #{$type}, 'base'), 20%), 15%);
+          } @else {
+            color: lighten(
+              mix($color-white, map.get($colors, #{$type}, 'base'), 20%),
+              15%
+            );
           }
         }
       }
