--- a/packages/theme-chalk/src/tag.scss
+++ b/packages/theme-chalk/src/tag.scss
@@ -1,21 +1,21 @@
-@use './common/variable'as *;
-@use './mixins/mixins.scss'as *;
+@use './common/variable' as *;
+@use './mixins/mixins.scss' as *;
 @use 'sass:map';
-@use "sass:color";
+@use 'sass:color';
 
 @include b(tag) {
+  box-sizing: border-box;
   display: inline-flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   height: 24px;
   padding: 0 9px;
   font-size: $vi-tag-font-size;
   line-height: 1;
-  border-width: 1px;
-  border-style: solid;
-  border-radius: $vi-tag-border-radius;
-  box-sizing: border-box;
   white-space: nowrap;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: $vi-tag-border-radius;
 
   @each $type in $tag-types {
     @include m($type) {
@@ -26,12 +26,12 @@
       }
 
       &.vi-tag--light {
-        &>.vi-tag--close {
+        & > .vi-tag--close {
           color: lighten(map.get($colors, $type, 'base'), 8%);
 
           &:hover {
-            background-color: map.get($colors, $type, 'base');
             color: $color-white;
+            background-color: map.get($colors, $type, 'base');
           }
         }
       }
@@ -42,7 +42,7 @@
       }
 
       &.vi-tag--dark {
-        &>.vi-tag--close {
+        & > .vi-tag--close {
           color: $color-white;
 
           &:hover {
@@ -56,7 +56,7 @@
       }
 
       &.vi-tag--plain {
-        &>.vi-tag--close {
+        & > .vi-tag--close {
           color: map.get($colors, $type, 'base');
 
           &:hover {
@@ -74,19 +74,19 @@
 
   // Close Icon
   @include m(close) {
-    border-radius: 50%;
-    cursor: pointer;
-    transform: translate(5px, 1px);
     padding: 2px;
+    cursor: pointer;
+    border-radius: 50%;
+    transform: translate(5px, 1px);
   }
 
   // Size
   @each $size in ('small', 'large') {
     @include m($size) {
-      padding: map.get($tag-sizes, $size, 'padding');
       height: map.get($tag-sizes, $size, 'height');
+      padding: map.get($tag-sizes, $size, 'padding');
 
-      &>.vi-tag--close {
+      & > .vi-tag--close {
         font-size: map.get($tag-sizes, $size, 'font-size');
       }
     }
