--- a/packages/theme-chalk/src/common/_variable.scss
+++ b/packages/theme-chalk/src/common/_variable.scss
@@ -414,3 +414,9 @@ $vi-link-text-color:#606266;
 /*     Dividert
 ******************/
 $vi-divider-bg:$color-white;
+
+/*     Timeline
+******************/
+$vi-timeline-node-color:#e4e7ed;
+$vi-font-size-small:13px;
+$vi-timeline-node-size-large:14px;
